Preventing scroll on iphone

--- a/vbarkovskij.com/css/agency.css
+++ b/vbarkovskij.com/css/agency.css
@@ -575,10 +575,8 @@ section h1.light-headline:after {
 }
 .menu-overlay {
   position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+  width: 100vw;
+  height: 100vh;
   background-color: rgba(0, 0, 0, 0.4);
   display: none;
   z-index: 999;
